# chip8-emulator

./: Cargo.toml  LICENSE  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: makefile.yaml
chip8-avsys/: Cargo.toml
chip8-avsys/src/: config.rs  lib.rs  main.rs
chip8-cli/: Cargo.toml
chip8-cli/src/: main.rs
chip8-vm/: Cargo.toml
chip8-vm/src/: config.rs  errors.rs  lib.rs  vm.rs
chip8-vm/src/cpu/: mod.rs  opcodes.rs  registers.rs  stack.rs
chip8-vm/src/io/: keyboard.rs  mod.rs  screen.rs
chip8-vm/src/memory/: mod.rs  ram.rs  rom.rs
